# pract8

./: CMakeLists.txt
.github/workflows/: ci-configuration.yml
app/: CMakeLists.txt  main.cpp
include/: settingsMenu.hpp  showHistory.hpp  startGame.hpp
lib/: GameLogic.cpp  GameLogic.h
src/: CMakeLists.txt  main.cpp  settingsMenu.cpp  showHistory.cpp  startGame.cpp
